<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/details"
          android:title="@string/report_title_details"
          android:titleCondensed="@string/report_title_condensed_details"
           />
    <item android:id="@+id/summary"
          android:title="@string/report_title_summary"
          android:titleCondensed="@string/report_title_condensed_summary"
           />
    <item android:id="@+id/categories"
          android:title="@string/report_title_categories"
          android:titleCondensed="@string/report_title_condensed_categories"
           />
    <item android:id="@+id/export"
          android:title="@string/report_title_export"
          android:titleCondensed="@string/report_title_condensed_export"
           />
    <item android:id="@+id/remove"
          android:title="@string/report_title_remove"
          android:titleCondensed="@string/report_title_condensed_remove"
           />
    <item android:id="@+id/settings"
          android:title="@string/report_title_settings"
          android:titleCondensed="@string/report_title_condensed_settings"
           />
</menu>    
