<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" >
	
    <!-- filter [      ] -->

	<Button
	    android:id="@+id/menu_set_filter"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/menu_filter" />

	<TextView
	    android:id="@+id/filter_value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_toRightOf="@id/menu_set_filter"
	    android:lines="2"
	    android:paddingBottom="2dp"
	    android:text="@string/menu_filter" />

	<Button
	    android:id="@+id/button_export_preview"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/filter_value"
	    android:layout_toRightOf="@+id/caption_filename"
	    android:text="@string/export_preview"
	    />
	
	<View
	    android:id="@+id/caption_end_of_filter"
	    style="@style/GlobalStyle.Line.Horizontal"
	    android:layout_below="@id/button_export_preview" />
	
	<TextView
	    android:visibility="invisible"
	    
	    android:id="@+id/caption_export_format"
	    style="@style/GlobalStyle.TextView.Caption"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/caption_end_of_filter"
	    android:text="@string/export_format" />

	<Spinner
	    android:visibility="invisible"
	    
	    android:id="@+id/spinner_export_format"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/button_export_preview"
	    android:layout_toRightOf="@+id/caption_filename"
	    android:entries="@array/export_formats"
	    android:prompt="@string/export_format" />
				
	<CheckBox 
	    android:visibility="invisible"
	    
	    android:id="@+id/checkbox_data_export_email" android:text="@string/export_sendto"
	    android:layout_alignParentLeft="true"
		android:layout_below="@id/spinner_export_format"
		android:layout_width="fill_parent" android:layout_height="wrap_content"/>
       
    <!-- filename [        ] , invisible if checkbox_data_export_email checked -->	
 				
	<TextView
	    android:id="@+id/caption_filename"
	    style="@style/GlobalStyle.TextView.Caption"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@id/caption_export_format"
	    android:layout_below="@id/checkbox_data_export_email"
	    android:text="@string/file_name" />

	<EditText
	    android:id="@+id/edit_text_data_export_filename"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@id/spinner_export_format"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/checkbox_data_export_email"
	    android:inputType="textUri"
	    android:text="@string/default_export_data_name" />
	
	<Button android:text="@string/button_data_export" android:id="@+id/button_data_export"
  		    android:layout_below="@id/edit_text_data_export_filename"
	    android:layout_alignParentLeft="true"
		
		android:layout_height="wrap_content" android:layout_width="fill_parent" />

</RelativeLayout>
